# fastapi-template

./: .env.example  .env.postgres-redis.example  .env.sqlite-redis.example  .env.sqlite.example  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.deploy.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-compose.yml  deploy-image.yml  docker-image.yml  helm-chart.yml
chart/: Chart.yaml  README.md  values.yaml
chart/ci/: test-values-postgres.yaml  test-values-sqlite.yaml
chart/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  litefs-configmap.yaml  litestream-configmap.yaml  migration-job.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  secret.yaml  service-headless.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  statefulset.yaml
chart/templates/tests/: test-api.yaml  test-health.yaml  test-readiness.yaml
docs/: api-usage.md  architecture.md  configuration.md  monitoring.md  operations.md  security.md  testing-stack.md  testing.md
ops/: docker-build-image.sh  docker-deploy-compose.sh  docker-deploy-image.sh  docker-entrypoint.sh  test_helm.sh  test_stack.py
ops/monitoring/: prometheus-alerts.yml
src/app/: settings.py
src/app/cache/: store.py
src/app/db/: engine.py
tests/: helpers.py
tests/integration/: test_app.py  test_middleware_stack.py
tests/unit/: test_auth.py  test_auth_asymmetric.py  test_builder.py  test_lifespan.py  test_settings.py
